Use type from @emotion/serialize instead of copying them

--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "dependencies": {
         "@emotion/serialize": "*",
         "@emotion/utils": "*",
-        "@emotion/cache": "*",
-        "csstype": "*"
+        "@emotion/cache": "*"
     },
     "devDependencies": {
         "@emotion/server": "^11.4.0",
