Make @emtoion/server an optional peer dependency

--- a/package.json
+++ b/package.json
@@ -55,7 +55,13 @@
     "homepage": "https://www.tss-react.dev",
     "peerDependencies": {
         "react": "^16.8.0 || ^17.0.2 || ^18.0.0",
-        "@emotion/react": "^11.4.1"
+        "@emotion/react": "^11.4.1",
+        "@emotion/server": "^11.4.0"
+    },
+    "peerDependenciesMeta": {
+        "@emotion/server": {
+            "optional": true
+        }
     },
     "dependencies": {
         "@emotion/serialize": "*",
