--- a/package.json
+++ b/package.json
@@ -69,24 +69,24 @@
         "@emotion/cache": "*"
     },
     "devDependencies": {
-        "@emotion/server": "^11.4.0",
-        "@emotion/react": "^11.4.1",
-        "@mui/material": "^5.0.3",
-        "@emotion/styled": "^11.3.0",
+        "@emotion/server": "11.4.0",
+        "@emotion/react": "11.9.0",
+        "@mui/material": "5.8.0",
+        "@emotion/styled": "11.3.0",
         "@types/node": "^15.3.1",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.9",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.4",
         "@typescript-eslint/eslint-plugin": "^4.24.0",
         "@typescript-eslint/parser": "^4.24.0",
         "eslint": "^7.26.0",
         "eslint-config-prettier": "^8.3.0",
         "husky": "^4.3.8",
         "lint-staged": "^11.0.0",
-        "next": "11.0.1",
+        "next": "12.1.7-canary.4",
         "prettier": "^2.3.0",
-        "react": "^17.0.2",
+        "react": "18.1.0",
         "ts-node": "^10.2.1",
-        "tsafe": "^0.7.1",
+        "tsafe": "^0.10.0",
         "typescript": "^4.4.3"
     }
 }
