--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
         "eslint-config-prettier": "^8.3.0",
         "husky": "^4.3.8",
         "lint-staged": "^11.0.0",
-        "next": "12.1.7-canary.4",
+        "next": "12.2.1",
         "prettier": "^2.3.0",
         "react": "18.1.0",
         "ts-node": "^10.2.1",
