--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
         "target": "ES6",
         "lib": ["es2015", "ES2019.Object", "DOM"],
         "esModuleInterop": true,
+        "moduleResolution": "node",
         "declaration": true,
         "outDir": "./dist",
         "sourceMap": false,
