--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tss-react",
-    "version": "4.0.0",
+    "version": "4.1.0-beta.0",
     "description": "makeStyles is dead, long live makeStyles!",
     "repository": {
         "type": "git",
