Fix previous commit

--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
         "type": "git",
         "url": "git://github.com/garronej/tss-react.git"
     },
-    "main": "dist/cjs/index.js",
-    "module": "dist/esm/index.js",
-    "types": "dist/esm/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/esm/index.d.ts",
             "import": "./dist/esm/index.js",
             "require": "./dist/cjs/index.js"
         },
         "./compat": {
-            "types": "./dist/esm/compat.d.ts",
             "import": "./dist/esm/compat.js",
             "require": "./dist/cjs/compat.js"
         },
         "./mui": {
-            "types": "./dist/esm/mui.d.ts",
             "import": "./dist/esm/mui.js",
             "require": "./dist/cjs/mui.js"
         },
         "./mui-compat": {
-            "types": "./dist/esm/mui-compat.d.ts",
             "import": "./dist/esm/mui-compat.js",
             "require": "./dist/cjs/mui-compat.js"
         }
     },
+    "typesVersions": {
+        "*": {
+           "*": ["./dist/esm/*"]
+        }
+    },
+    "main": "dist/cjs/index.js",
+    "types": "dist/esm/index.d.ts",
     "scripts": {
         "build": "rm -rf dist && yarn build:esm && yarn build:cjs",
         "build:esm": "tsc --module es2015 --outDir dist/esm",
