--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - v4
   pull_request:
     branches:
       - main
@@ -118,6 +117,9 @@ jobs:
             PACKAGE_MANAGER=yarn
         fi
         $PACKAGE_MANAGER run build
+    - run: npx -y -p denoify@1.0.3 denoify_enable_short_npm_import_path
+      env:
+        DRY_RUN: "0"
     - name: Publishing on NPM
       run: |
         if [ "$(npm show . version)" = "$VERSION" ]; then
@@ -156,4 +158,4 @@ jobs:
     - run: git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${{github.repository}}.git
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - run: npx -y -p gh-pages@3.1.0 gh-pages -d src/test/apps/spa/build --dest test --add -u "github-actions-bot <actions@github.com>" 
+    - run: npx -y -p gh-pages@3.1.0 gh-pages -d src/test/apps/spa/build --dest test --add -u "github-actions-bot <actions@github.com>"
