--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tss-react",
-    "version": "4.1.0-beta.5",
+    "version": "4.1.0-beta.6",
     "description": "makeStyles is dead, long live makeStyles!",
     "repository": {
         "type": "git",
@@ -62,16 +62,12 @@
     "author": "u/garronej",
     "license": "MIT",
     "files": [
-        "dist/esm",
+        "dist/",
+        "!dist/test/",
         "!dist/esm/test/",
-        "!dist/esm/bin/",
-        "!dist/esm/package.json",
+        "!dist/tsconfig.tsbuildinfo",
         "!dist/esm/tsconfig.tsbuildinfo",
-        "dist/cjs",
-        "!dist/cjs/test/",
-        "!dist/cjs/bin/",
-        "!dist/cjs/package.json",
-        "!dist/cjs/tsconfig.tsbuildinfo"
+        "!dist/package.json"
     ],
     "keywords": [
         "jss",
