--- a/package.json
+++ b/package.json
@@ -11,20 +11,16 @@
     "module": "dist/esm/index.js",
     "exports": {
         ".": {
-            "import": "./dist/esm/index.js",
-            "require": "./dist/index.js"
+            "import": "./dist/esm/index.js"
         },
         "./mui": {
-            "import": "./dist/esm/mui.js",
-            "require": "./dist/mui.js"
+            "import": "./dist/esm/mui.js"
         },
         "./compat": {
-            "import": "./dist/esm/compat.js",
-            "require": "./dist/compat.js"
+            "import": "./dist/esm/compat.js"
         },
         "./mui_compat": {
-            "import": "./dist/esm/mui_compat.js",
-            "require": "./dist/mui_compat.js"
+            "import": "./dist/esm/mui_compat.js"
         }
     },
     "scripts": {
