--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tss-react",
-    "version": "4.1.1",
+    "version": "4.1.2-beta.2",
     "description": "makeStyles is dead, long live makeStyles!",
     "repository": {
         "type": "git",
