--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "module": "CommonJS",
         "target": "ES6",
         "lib": ["es2015", "ES2019.Object", "DOM"],
         "esModuleInterop": true,
