--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
             "import": "./dist/esm/nextJs.js",
             "require": "./dist/nextJs.js"
         },
+        "./next": {
+            "import": "./dist/esm/next.js",
+            "require": "./dist/next.js"
+        },
         "./compat": {
             "import": "./dist/esm/compat.js",
             "require": "./dist/compat.js"
@@ -109,11 +113,11 @@
         "eslint-config-prettier": "^8.3.0",
         "husky": "^4.3.8",
         "lint-staged": "^11.0.0",
-        "next": "12.2.1",
+        "next": "12.3.1",
         "prettier": "^2.3.0",
         "react": "18.1.0",
         "ts-node": "^10.2.1",
         "tsafe": "^0.10.0",
-        "typescript": "^4.4.3"
+        "typescript": "^4.8.4"
     }
 }
