--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tss-react",
     "version": "4.3.1",
-    "description": "makeStyles is dead, long live makeStyles!",
+    "description": "Type safe CSS-in-JS API heavily inspired by react-jss",
     "repository": {
         "type": "git",
         "url": "git://github.com/garronej/tss-react.git"
