Only allow ESM for importing dsfr

--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
             "require": "./dist/cssAndCx.js"
         },
         "./dsfr": {
-            "import": "./dist/esm/dsfr.js",
-            "require": "./dist/dsfr.js"
+            "import": "./dist/esm/dsfr.js"
         }
     },
     "scripts": {
