Add support for Next.js 13 appDir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "strict": true,
         "downlevelIteration": true,
         "jsx": "react",
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "skipLibCheck": true
     },
     "include": ["src"],
     "exclude": ["src/test/apps", "src/bin"]
