--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
             "require": "./dist/nextJs.js"
         },
         "./next": {
-            "import": "./dist/esm/next.js",
-            "require": "./dist/next.js"
+            "import": "./dist/esm/next/index.js",
+            "require": "./dist/next/index.js"
         },
         "./compat": {
             "import": "./dist/esm/compat.js",
@@ -46,6 +46,7 @@
         "build": "tsc && tsc --module es2015 --outDir dist/esm",
         "start_spa": "yarn yarn_link && cd src/test/apps/spa && yarn start",
         "start_ssr": "yarn yarn_link && cd src/test/apps/ssr && yarn dev",
+        "start_appdir": "yarn yarn_link && cd src/test/apps/next-appdir && yarn dev",
         "lint:check": "eslint . --ext .ts,.tsx",
         "lint": "yarn lint:check --fix",
         "_format": "prettier '**/*.{ts,tsx,json,md}'",
@@ -104,20 +105,20 @@
     },
     "devDependencies": {
         "@codegouvfr/react-dsfr": "^0.0.28",
-        "@emotion/server": "11.4.0",
-        "@emotion/react": "11.9.0",
-        "@mui/material": "5.10.7",
-        "@emotion/styled": "11.3.0",
+        "@emotion/server": "11.10.0",
+        "@emotion/react": "11.10.5",
+        "@mui/material": "5.11.1",
+        "@emotion/styled": "11.10.5",
         "@types/node": "^15.3.1",
-        "@types/react": "18.0.9",
-        "@types/react-dom": "18.0.4",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.9",
         "@typescript-eslint/eslint-plugin": "^4.24.0",
         "@typescript-eslint/parser": "^4.24.0",
         "eslint": "^7.26.0",
         "eslint-config-prettier": "^8.3.0",
         "husky": "^4.3.8",
         "lint-staged": "^11.0.0",
-        "next": "12.3.1",
+        "next": "13.0.7",
         "prettier": "^2.3.0",
         "react": "18.1.0",
         "ts-node": "^10.2.1",
